k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berget-website
  namespace: berget-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: berget-website
  template:
    metadata:
      labels:
        app: berget-website
    spec:
      containers:
        - name: berget-website
          image: ghcr.io/berget-cloud/landing-page:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
