k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: berget-website
  namespace: berget-web
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: berget-website
