k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: berget-website
  namespace: berget-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "Content-Security-Policy: default-src 'self'; script-src 'self' https://*.berget.ai; style-src 'self' https://*.berget.ai; font-src 'self' https://*.berget.ai; img-src 'self' https://*.berget.ai data:; connect-src 'self' https://*.berget.ai https://api.berget.ai; base-uri 'self'; form-action 'self'; frame-src 'none'; frame-ancestors 'none'; object-src 'none'; worker-src 'self'; manifest-src 'self'; upgrade-insecure-requests;";
    #   more_set_headers "X-Content-Type-Options: nosniff";
    #   more_set_headers "X-Frame-Options: DENY";
    #   more_set_headers "X-Xss-Protection: 0";
    #   more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
    #   more_set_headers "Cross-Origin-Resource-Policy: same-site";
    #   more_set_headers "Referrer-Policy: strict-origin";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - berget.ai
        - www.berget.ai
        - berget.cloud
        - www.berget.cloud
      secretName: berget-ai-tls
  rules:
    - host: berget.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: berget-website
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: berget-redirects
  namespace: berget-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/permanent-redirect: 'https://berget.ai/$request_uri'
    nginx.ingress.kubernetes.io/permanent-redirect-code: '308'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.berget.ai
        - berget.cloud
        - www.berget.cloud
      secretName: berget-redirects-tls
  rules:
    - host: www.berget.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: berget-website
                port:
                  number: 80
    - host: berget.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: berget-website
                port:
                  number: 80
    - host: www.berget.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: berget-website
                port:
                  number: 80
